<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="60sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/blue"

         />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcome"
        android:layout_marginBottom="30dp"
        android:textSize="25dp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/round_field"
        android:paddingVertical="10dp"
        android:paddingLeft="7dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/round_field"
        android:paddingVertical="10dp"
        android:paddingLeft="7dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/forget_password"
        android:paddingRight="10dp"
        android:textColor="@color/blue"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/create_new_account"
        android:paddingRight="10dp"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/custom_button"
        app:backgroundTint="@null"
        />




</LinearLayout>